2011-07-23 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Fixed largest bottom.

2011-07-22 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Log time analysis.

	* generator/createBigEvenOdd.sh: Create a big benchmarks for Even-Odd program.

	* include/dlvhex/MLPSolver.hpp: Tests for -n and --split.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/tests/module-EvenOdd-n1.out: Likewise.

2011-07-13  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update.

2011-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/avgScript.sh: Computes average performance for each call pattern.

2011-06-27 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestHexParserModule.cpp: Relative path for examples.
	* testsuite/TestMLPSolver.cpp: Likewise.

	* testsuite/Makefile.am: Fixed include directory of external solver.

2011-06-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/TestMLPSolver.cpp: Removed some hard-coded relative
	paths, missing bits and pieces are for Tri to fix.

2011-06-18  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Create libhex.a and libhexND.a to reduce
	compile-time by 33%. Can be further improved by compiling
	$(top_srcdir)/src/dlvhex/lib{X,Y,Z}.a.

	* README: Small fixes.

	* src/dlvhex/Makefile.am (dlvhex_LDADD): Move @LIBCURL@ to the
	end of the list, linux i386 linker is sensitive to this.

	* configure.ac: Fix messages.

	* examples/tests/query_hex_ground1ca.stdout: Remove whitespace in
	wc output. (ticket #46)

2011-06-17 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestMLPSolver.cpp: Test different available solver.

	* include/dlvhex/MLPSolver.hpp: Not always assuming clingo.

2011-06-16 Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Incorporating libclingo as the backend solver.
	* src/dlvhex/dlvhex.cpp: Likewise.